# openfga-rust-sdk

./: .fossa.yml  CONTRIBUTING.md  Cargo.toml  NOTICE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.openapi-generator/: FILES
docs/: ListStoresResponse.md  OpenFgaApi.md  ReadAuthorizationModelsResponse.md  ReadChangesResponse.md  ReadResponse.md
src/apis/: configuration.rs  open_fga_api.rs
src/models/: any.rs  assertion.rs  authorization_model.rs  check_request.rs  check_response.rs  computed.rs  contextual_tuple_keys.rs  create_store_request.rs  create_store_response.rs  difference.rs  error_code.rs  expand_request.rs  expand_response.rs  get_store_response.rs  internal_error_code.rs  internal_error_message_response.rs  leaf.rs  list_objects_request.rs  list_objects_response.rs  list_stores_response.rs  metadata.rs  mod.rs  node.rs  nodes.rs  not_found_error_code.rs  object_relation.rs  path_unknown_error_message_response.rs  read_assertions_response.rs  read_authorization_model_response.rs  read_authorization_models_response.rs  read_changes_response.rs  read_request.rs  read_response.rs  relation_metadata.rs  relation_reference.rs  status.rs  store.rs  tuple.rs  tuple_change.rs  tuple_key.rs  (+15 more)
